# geosacs

./: .gitignore  LICENSE  README.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Correction.msg  SurfacePose.msg
custom_msgs/srv/: AppControl.srv  LoadData.srv
drone_panda/drone-panda/: CMakeLists.txt  README.md  package.xml  plugin_desc.xml
drone_panda/drone-panda/config/: JointController.yaml  transforms.yaml
drone_panda/drone-panda/launch/: all.launch  all_shalutha.launch  drone_only.launch  drone_tuning.launch  fd_sim.launch  franka_control_urdfmod.launch  joint_state_pub.launch  joint_state_pub_shalutha.launch  kinect_toggler.launch  lio.launch  mocap.launch  panda_hw.launch  results.launch  robot_only.launch  sim.launch  tello.launch
drone_panda/drone-panda/meshes/: fake_drone.STL
drone_panda/drone-panda/nodes/: alternate_view_manager  autonomous_mapping  drone_controller  drone_controller_tuning  fd_converter  joy_driver  panda_test  path_recorder  pc_publish  pc_publish_shalutha  pc_record  pcl_plane_to_bounding  rviz_camera  rviz_manager  simulator  simulator_lio  simulator_old  spacemouse_driver  static_publisher  tello_driver  tello_driver_launcher  torque_filter  velocity_controller  virtual_drone_manager
drone_panda/drone-panda/rviz/: lio.rviz  lio_marker.rviz  real.rviz  results.rviz  sim.rviz  simu.rviz
drone_panda/drone-panda/src/: ForceDimension.cpp  PCLPlanes.cpp  cloudFilter.cpp  dronepanel.cpp  dronepanel.h
drone_panda/drone-panda/urdfs/: drone.urdf  dronealt.urdf  lio_arm.urdf  lio_complete.urdf  lio_relaxedIK.urdf  panda_arm_hand_ISTHISUSED.urdf
drone_panda/drone-ros-msgs/: CMakeLists.txt  package.xml
drone_panda/drone-ros-msgs/msg/: Planes.msg  PlanesInliers.msg  PlanesInliersArr.msg  PoseCost.msg
drone_panda/panda-ik/: CMakeLists.txt  Cargo.toml  README.md  package.xml  panda.urdf
drone_panda/panda-ik/cpp_src/: main.cpp  main_original.cpp
drone_panda/panda-ik/include/: PandaIKRust.h
drone_panda/panda-ik/launch/: panda_ik.launch
drone_panda/panda-ik/src/panda_ik_rust-build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
drone_panda/panda-ik/src/panda_ik_rust-build/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
drone_panda/panda-ik/src/panda_ik_rust-build/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
drone_panda/panda-ik/src/panda_ik_rust-build/catkin_generated/installspace/: panda_ik.pc  panda_ikConfig.cmake
drone_panda/panda-ik/src/panda_ik_rust-build/catkin_generated/stamps/panda_ik/: _setup_util.py.stamp  package.xml.stamp
drone_panda/panda-ik/src/panda_ik_rust-build/devel/: .catkin
drone_panda/panda-ik/src/panda_ik_rust-build/devel/lib/pkgconfig/: panda_ik.pc
drone_panda/panda-ik/src/panda_ik_rust-build/devel/share/panda_ik/cmake/: panda_ikConfig.cmake
drone_panda/panda-ik/src/panda_ik_rust-build/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drone_panda/panda-ik/src/panda_ik_rust-build/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
drone_panda/panda-ik/src/panda_ik_rust-build/gtest/googletest/: CTestTestfile.cmake  Makefile
drone_panda/panda-ik/src/panda_ik_rust-stamp/: panda_ik_rust-build-Release.cmake
drone_panda/panda-ik/urdfs/: panda.urdf
fp_messages/: navigation.rviz
fp_messages/fp_core_msgs/: CMakeLists.txt  README.md
fp_messages/fp_core_msgs/msg/: Pose.msg
fp_messages/fp_core_msgs/srv/: ForwardKinematics.srv  GetGridPoints.srv  GetListFloat.srv  GetPose.srv  GetStatus.srv  MoveJoint.srv  MoveTool.srv  PowerUpAndCalibrate.srv  ReadSensorData.srv  TestScript.srv  WriteAnalogIO.srv  WriteDigitalIO.srv
fp_messages/fp_descriptions/: install.sh
fp_messages/fp_pgrip_msgs/: CMakeLists.txt  README.md
fp_messages/fp_pgrip_msgs/srv/: ToggleGripper.srv
geosacs/: CMakeLists.txt  package.xml
geosacs/data/: experiment_data_geosacs.txt  experiment_data_geosacsv1.txt  experiment_data_geosacsv2.txt  experiment_data_latent.txt  iros_demo1-1.npz  iros_demo1-2.npz
geosacs/launch/: geosacs.launch  latent.launch  main.launch  replay.launch
geosacs/msg/: WeightedPose.msg
geosacs/rviz/: geosacs.rviz
geosacs/src/: bsplineGC.py  circularGC.py  constructGC.py  data_processing.py  extractBoundariesBSpline.py  extractBoundariesCircle.py  getT.py  getTNB.py  ik_interface.py  latent_actions.py  main.py  main_alternative.py  main_v2.py  path_recorder.py  plotGC.py  plotReproduction.py  randomInitialPoints.py  randomPointsInSpatialCircle.py  reproduce.py  static_publisher.py  teaching_tcp.py  teaching_tcp_prev.py  teleop.py  teleop_lio.py  test.ipynb  tlgc.py  tlgc_before_cleaning.py  tlgc_for_full_canal_opt.py  tlgc_v1.py  visualisation_rviz.py  visualise_tlgc.py
joy_teleop/: CMakeLists.txt  package.xml
joy_teleop/launch/: joy_teleop.launch
joy_teleop/models/: CAE_model_lio_laundry  CAE_model_lio_laundry_18th  CAE_model_lio_simple  CAE_model_lio_simple2  CAE_model_lio_simple3  CAE_model_lio_simple4  CAE_model_lio_test1  CAE_model_lio_test10  CAE_model_lio_test11  CAE_model_lio_test2  CAE_model_lio_test3  CAE_model_lio_test4  CAE_model_lio_test5  CAE_model_lio_test6  CAE_model_lio_test7  CAE_model_lio_test8  CAE_model_lio_test9  CAE_model_lio_updated  CAE_model_lio_updatedv2  CAE_model_lio_updatedv3  CAE_model_lio_updatedv4  CAE_model_lio_updatedv5  CAE_model_lio_updatedv6  CAE_model_lio_updatedv7
joy_teleop/rviz/: teleop.rviz
joy_teleop/src/: joy_controller.py  joy_driver.py  pos_publisher.py  pos_publisher_lla.py  test.ipynb  velo_publisher.py
lio_robot_ik/panda-ik/: CMakeLists.txt  package.xml
lio_robot_ik/panda-ik/cpp_src/: main.cpp
lio_robot_ik/panda-ik/src/: lib.rs
lio_robot_ik/panda-ik/urdfs/: lio_arm_reframed.urdf
lio_robot_model/: DEVELOPER_README.md  README.md
lio_robot_model/fp_materials/: package.xml
lio_robot_model/lio_description/: CMakeLists.txt
lio_specific_pkg/: CMakeLists.txt  package.xml
myp_app_manager/: CMakeLists.txt  package.xml
(+127 files in other folders)
