<?xml version="1.0"?>
<package format="2">
    <name>drone_ros_msgs</name>
    <version>1.0.0</version>
    <description>
        MSG definitions for the Ros panda drone project
    </description>
    <maintainer email="esenft@wisc.edu">Emmanuel S.</maintainer>
    <license>WTFPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>  
    <depend>geometry_msgs</depend>  
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
