<?xml version="1.0"?>
<package format="2">
  <name>panda_ik</name>
  <version>0.1.1</version>
  <description>test control</description>
  <maintainer email="kpwelsh@cs.wisc.edu">Kevin Welsh</maintainer>
  <license>Apache 2.0</license>

  <author>Kevin Welsh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>drone_ros_msgs</build_depend>
  <!-- <build_depend>custom_msgs</build_depend> -->
  

  <build_export_depend>message_runtime</build_export_depend>

  <depend>geometry_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>custom_msgs</depend> -->

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>drone_ros_msgs</exec_depend>
  <!-- <exec_depend>custom_msgs</exec_depend> -->
</package>
